[package]
name = "pogoda"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
colored = "2.0"
text_io = "0.1.8"
chrono = { version = "0.4", features = ["serde"] }
